--- a/spiderman.html
+++ b/spiderman.html
@@ -10,6 +10,6 @@
     <h1>Spiderman: No Way Home</h1>
     <img src="./images/spider-man.jpg" alt="Movie art of spiderman with MJ on the bottom right.">
     <p>With Spider-Man's identity now revealed, Peter asks Doctor Strange for help. When a spell goes wrong, dangerous foes from other worlds start to appear, forcing Peter to discover what it truly means to be Spider-Man.</p>
-    
+    <a href="movies.html">Movies</a>
 </body>
 </html>
