--- a/without.html
+++ b/without.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Without Remorse</h1>
-    <img src="./images/without.jpg" alt="The title of the movie with a picture of Micheal B Jordan.">
+    <img src="./images/without.jpg" alt="The title of the movie with a picture of Micheal B Jordan." width="600" height="600">
     <p>Seeking justice for the murder of his pregnant wife, an elite Navy SEAL uncovers a covert plot that threatens to engulf the United States and Russia in an all-out war.</p>
     <a href="movies.html">Movies</a>
 </body>
