--- a/dune.html
+++ b/dune.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Dune</h1>
-    <img src="./images/Dune.jpg" alt="A desert with the faces of the actors in the sky.">
+    <img src="./images/Dune.jpg" alt="A desert with the faces of the actors in the sky." width="600" height="600">
     <p>A noble family becomes embroiled in a war for control over the galaxy's most valuable asset while its heir becomes troubled by visions of a dark future.</p>
     <p>Paul Atreides arrives on Arrakis after his father accepts the stewardship of the dangerous planet. However, chaos ensues after a betrayal as forces clash to control melange, a precious resource.</p>
     <a href="movies.html">Movies</a>
