--- a/spiderman.html
+++ b/spiderman.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Spiderman: No Way Home</h1>
-    <img src="./images/spider-man.jpg" alt="Movie art of spiderman with MJ on the bottom right.">
+    <img src="./images/spider-man.jpg" alt="Movie art of spiderman with MJ on the bottom right." width="600" height="600">
     <p>With Spider-Man's identity now revealed, Peter asks Doctor Strange for help. When a spell goes wrong, dangerous foes from other worlds start to appear, forcing Peter to discover what it truly means to be Spider-Man.</p>
     <a href="movies.html">Movies</a>
 </body>
