--- a/venom.html
+++ b/venom.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Venom: Let There Be Carnage</h1>
-    <img src="./images/venom.jpg" alt="The title on the movie with a picture of venom and the movie actors.">
+    <img src="./images/venom.jpg" alt="The title on the movie with a picture of venom and the movie actors." width="600" height="600">
     <p>Eddie Brock tries to revive his failing career by interviewing a serial killer, Cletus Kasady, who is on death row. When Carnage gains control over Cletus's body, he escapes from the prison.</p>
     <a href="movies.html">Movies</a>
 </body>
